fix(autoscaling): reconcile targets and instance refreshes
Reconcile desired capacity, target-group membership, target ports, warmup, replacement progress, failure state, and persisted restart state as one Auto Scaling lifecycle. Preserve healthy members and prior group state when refresh progress cannot safely continue.